# seshat

./: Makefile  README.md  pyproject.toml
seshat/: __init__.py  analyse.py  parse.py
tests/: test_seshat.py
