[tool.poetry]
name = "seshat"
version = "0.1.0"
description = ""
authors = ["Seth Woodworth <seth@sethish.com>", "Alex P Fox <alex@alexandrafox.me>"]

[tool.poetry.dependencies]
python = "^3.9"
pip = "^20.3.3"
setuptools = "^51.1.1"
wheel = "^0.36.2"
spacy = "^2.3.5"
spacy-lookups-data = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
